<resources>
    <string name="app_name">YoMovies</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui\nfile yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan\nupdate file terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk\ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="placeholder_username">Masukan username</string>
    <string name="password">Password</string>
    <string name="placeholder_password">Masukan Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="placeholder_nama">Masukan Nama</string>
    <string name="email_address">Email Address</string>
    <string name="placeholder_email_address">Masukan Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="selamat_datang">Selamat Datang\nMuhammad Ashari Abdillah</string>
    <string name="simpan_dan_lanjutkan">Simpan Dan Lanjutkan</string>
    <string name="ucapan_nama">Muhammad Ashari Abdillah</string>
    <string name="idr">IDR 280.000</string>
    <string name="comming_soon">Comming Soon</string>
    <string name="judul_film">Kerja Remote Disangka Ngepet</string>
    <string name="jenis_film">Aksi, Brutal</string>
    <string name="story_board">Story Board</string>
    <string name="story_board_desc">banyak banyak banyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyakbanyak</string>
    <string name="who_played">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="empty">Empty</string>
    <string name="string_A">A</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="B">B</string>
    <string name="string_c">C</string>
    <string name="string_d">D</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="tanggal">11, Agustus 10 AM</string>
    <string name="tempat_biskop">Bekasi Cyber Park</string>
    <string name="items">Items</string>
    <string name="wallet">E-Wallet</string>
    <string name="desc_saldo">Saldo pada e-wallet kamu tidak mencukupi untuk melakukan transaksi</string>
    <string name="simpan_data_baru">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_history">My History</string>
</resources>